# uc-intg-skyq

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entry.sh  driver.json  pyproject.toml  requirements.txt  skyq-discovery.py
.github/workflows/: build.yml
uc_intg_skyq/: __init__.py  __main__.py  browser.py  client.py  config.py  const.py  device.py  driver.py  media_player.py  remote.py  sensor.py  setup.py  setup_flow.py  voice_assistant.py
