[build-system]
requires = ["setuptools>=65.0.0", "wheel~=0.40.0"]
build-backend = "setuptools.build_meta"

[project]
name = "intg-skyq"
version = "2.0.0"
description = "SkyQ Integration for Unfolded Circle Remote with Voice Assistant support"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MPL-2.0"}
authors = [
    {name = "Meir Miyara", email = "meir.miyara@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL-2.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
]

dependencies = [
    "ucapi==0.5.1",
    "ucapi-framework>=1.4.0",
    "aiohttp>=3.8.0",
    "pyskyqremote>=0.3.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
]

[project.urls]
Homepage = "https://github.com/mase1981/uc-intg-skyq"
Repository = "https://github.com/mase1981/uc-intg-skyq.git"
Issues = "https://github.com/mase1981/uc-intg-skyq/issues"

[project.scripts]
intg-skyq = "intg_skyq.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["intg_skyq*"]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ['py311']