[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uc-intg-skyq"
description = "SkyQ Integration for Unfolded Circle Remote Two/3"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MPL-2.0"}
authors = [
    {name = "Meir Miyara", email = "meir.miyara@gmail.com"}
]
keywords = [
    "unfoldedcircle",
    "integration",
    "skyq",
    "satellite",
    "remote-control"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "ucapi>=0.6.0",
    "ucapi-framework>=1.9.1",
    "aiohttp>=3.9.0",
    "pyskyqremote>=0.3.26",
    "certifi>=2023.0.0",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/mase1981/uc-intg-skyq"
"Bug Reports" = "https://github.com/mase1981/uc-intg-skyq/issues"
"Source" = "https://github.com/mase1981/uc-intg-skyq"

[tool.setuptools]
packages = ["uc_intg_skyq"]

[tool.setuptools.dynamic]
version = {attr = "uc_intg_skyq.__version__"}

[tool.setuptools.package-data]
uc_intg_skyq = ["*.json"]
